# weather-app-challenge

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOIEMENT_INDEX.md  ENV_VARIABLES.md  HEROKU_DEPLOY.md  Procfile  QUICK_START_AWS.md  README.md  README_DEPLOYMENT.md  REDIS_SETUP.md  debug-opendap-response.txt  deploy-to-s3.sh  docker-compose.yml  index.html  opendap-response.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  terraform.tfstate  test-download.js  test-grib.js  test-noaa-gfs.js  test-opendap-downloader.js  test-opendap-latlonformat.js  test-opendap-raw.js  test-opendap-simple.js  test-opendap.js  test-redis-data.js  test-save-response.js  tsconfig.json  vite.config.ts
.sqlx/: query-1b7491762067492167dca1f24613dd7d16e83f18c9431b38cf9c4f01b1bad863.json  query-476f6a7d2a64ea7c73bb5a00fc05add29ddf4f8857b9acce6316f48d7fcecbab.json  query-57718412250711b6b86448ad291e80ab8f81db11180c9a67d8c149d95a7bf4b3.json  query-594005fa81e3d93ac61a7121b9011e2e8eb4bf481a0324ac9a8c2c2ed5b543c4.json  query-5afaca8206af82cb0a2f84ed85e647bd15acb51555e08f30962cbb582afeedc0.json  query-72b8306697a620ebe3c384b46bcbbee3ebaa37a27101b6a7ae76ed0a5d393545.json  query-75b262389d9644c3fc1876dc8426b0775c4f43f2c833184072a92b4b230090a4.json  query-8a5bf91353bc1527e8f16f85558f7c44fcb8348450fffc8f050537ef598e53d6.json  query-c86ff3770c64e066c98293d6969b6b9e830df9806bd710fac83930f38f7e2ba3.json  query-cfc00a003ba2776808d63b54508c69b53a2f8101e65e1b5014280e9c0caa4065.json  query-d528a91e67af588046520ccd901a2980d7187889fed01c4141eda1fafa8e621d.json  query-df469a08aff6579665e0f5dbf4891ba383c1e6b26e34010951e39a3a75d1f167.json  query-e895f196556035258a43d2784783383c03e69ea716c8eae06c6bfd2affffec78.json  (+1 more)
frontend/: .env  index.html  (+7 more)
(+157 files in other folders)
