[package]
name = "actix_sqlx_template"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "migrate",
  "chrono",
] }
dotenvy = "0.15"
tokio = { version = "1.30.0", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
lettre = "0.11.15"
rust-embed = "8.7.0"
mime_guess = "2.0.5"
base64 = "0.22.1"
anyhow = "1.0.98"
